- Fix list overflow-x

--- a/app/components/ContourList/ContourList.css
+++ b/app/components/ContourList/ContourList.css
@@ -1,6 +1,7 @@
 .list {
     width:100%;
+
     max-height:250px;
-    overflow-y:scroll;
-    overflow-y: inherit;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
